fix spacing, add starter tabs & basic index coming soon

--- a/index.css
+++ b/index.css
@@ -115,6 +115,10 @@ select {
   margin-inline: auto;
 }
 
+.no-decoration {
+  text-decoration: none;
+}
+
 .screen-reader-only {
   position: absolute;
   width: 1px;
@@ -251,6 +255,8 @@ p {
 
 .underline-indicators > * {
   padding: var(--underline-gap, 1rem) 0;
+  border: 0;
+  cursor: pointer;
   border-bottom: .2rem solid hsl( var(--clr-white) / 0 );
 }
 
@@ -259,6 +265,12 @@ p {
   border-color: hsl( var(--clr-white) / .5 );
 }
 
-.underline-indicators > .active {
+.underline-indicators > .active,
+.underline-indicators > [aria-selected="true"] {
+  color: hsl( var(--clr-white) / 1);
   border-color: hsl( var(--clr-white) / 1);
+}
+
+.tab-list {
+  --gap: 3rem;
 }
